--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 
     <link rel="stylesheet" href="CSS/style.css" />
     <link rel="stylesheet" href="CSS/general.css" />
+    <link rel="stylesheet" href="CSS/queries.css" />
     <title>Omnifood</title>
   </head>
   <body>
+    <!-- nav-open
+    To be put back into the header -->
     <header class="header">
       <a href="#">
         <img class="logo" src="img/omnifood-logo.png" alt="omnifood logo" />
@@ -29,6 +32,11 @@
           <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
 
     <main>
