--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="CSS/general.css" />
     <link rel="stylesheet" href="CSS/queries.css" />
     <title>Omnifood</title>
+
+    <script defer src="js/script.js"></script>
   </head>
   <body>
     <!-- nav-open
@@ -646,7 +648,8 @@
           </ul>
 
           <p class="copyright">
-            Copyright &copy; 2027 by Omnifood, Inc. All rights reserved
+            Copyright &copy; <span class="year">2027</span> by Omnifood, Inc.
+            All rights reserved
           </p>
         </div>
         <div class="address-col">
