Implement sticky navigation

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <!-- nav-open
     To be put back into the header -->
-    <header class="header">
+    <header class="header sticky">
       <a href="#">
         <img class="logo" src="img/omnifood-logo.png" alt="omnifood logo" />
       </a>
