--- a/index.html
+++ b/index.html
@@ -88,12 +88,17 @@
             </div>
           </div>
           <div class="hero-image-box">
-            <img
-              class="hero-img"
-              src="img/hero.png"
-              alt="A woman enjoying her meal, meals in storage container, 
-            and food bowls on a table"
-            />
+            <picture>
+              <source srcset="img/hero.webp" type="img/webp" />
+              <source srcset="img/hero-min.png" type="img/png" />
+
+              <img
+                class="hero-img"
+                src="img/hero-min.png"
+                alt="A woman enjoying her meal, meals in storage container, 
+                    and food bowls on a table"
+              />
+            </picture>
           </div>
         </div>
       </section>
