--- a/index.html
+++ b/index.html
@@ -593,11 +593,12 @@
                 eating well today. You can cancel or pause anytime. And the
                 first meal is on us!
               </p>
-              <form class="cta-form" action="#">
+              <form class="cta-form" name="Sign-up" netlify>
                 <div>
                   <label for="full-name">Full Name</label>
                   <input
                     id="full-name"
+                    name="full-name"
                     type="text"
                     placeholder="Your Name"
                     required
@@ -608,6 +609,7 @@
                   <label for="email">Email address</label>
                   <input
                     id="email"
+                    name="email"
                     type="email"
                     placeholder="me@example.com"
                     required
@@ -617,7 +619,7 @@
                 <div>
                   <label for="select-where">Where did you hear about us?</label>
 
-                  <select id="select-where" name="" required>
+                  <select id="select-where" name="select-where" required>
                     <option value="">Please choose an option:</option>
                     <option value="friends">Friends and family</option>
                     <option value="youtube">Youtube video</option>
