--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                 eating well today. You can cancel or pause anytime. And the
                 first meal is on us!
               </p>
-              <form class="cta-form" name="Sign-up" netlify>
+              <form class="cta-form" name="contact" netlify>
                 <div>
                   <label for="full-name">Full Name</label>
                   <input
